added observability tools like prometheus zipking and opentelemetry